--- a/summaries/summary3_length_dist.Rmd
+++ b/summaries/summary3_length_dist.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Report 3: Length distributions'
+title: 'Report 3: Redefining boundaries'
 author: "Cyril Matthey-Doret"
 date: "11 octobre 2016"
 output: pdf_document
